[package]
name = "libraw"
version = "0.2.0"
authors = ["David Cuddeback <david.cuddeback@gmail.com>"]
description = "Rust wrapper for libraw"
homepage = "https://github.com/dcuddeback/libraw-rs"
repository = "https://github.com/dcuddeback/libraw-rs"
documentation = "http://dcuddeback.github.io/libraw-rs/libraw/"
license = "MIT"
readme = "README.md"
keywords = ["libraw", "raw", "camera", "image"]
edition = "2021"


[dependencies]
libraw-sys = { version = "0.2.0", path = "../libraw-sys"}
libc = "0.2"
