[package]
name = "libraw"
version = "0.2.0"
authors = ["DaLappen"]
description = "Rust wrapper for libraw"
repository = "https://github.com/DaLappen/libraw-sys"
readme = "README.md"
keywords = ["libraw", "raw", "camera", "image"]
edition = "2021"


[dependencies]
libraw-sys = { version = "0.2.0", path = "../libraw-sys"}
libc = "0.2"
